# sas_ur_control_template

./: CMakeLists.txt  README.md  package.xml
launch/: compose_with_coppeliasim_launch.py  dummy_move_in_coppeliasim_example_cpp_launch.py  dummy_move_in_coppeliasim_example_launch.py  dummy_with_coppeliasim_launch.py
scripts/: joint_interface_example.py
src/: joint_interface_example.cpp
