<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sas_ur_control_template</name>
  <version>0.0.0</version>
  <description>A template for code interfacing with `sas_robot_driver_ur`. Change this as needed.</description>
  <maintainer email="murilo.marinho@manchester.ac.uk">Murilo Marinho</maintainer>
  <license>LGPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sas_robot_driver_ur</depend>
  <depend>sas_core</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>    
